# nonebot-plugin-withdraw

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_withdraw/: __init__.py  config.py  handler.py  receipt.py  utils.py
nonebot_plugin_withdraw/adapters/: __init__.py  discord.py  dodo.py  feishu.py  kaiheila.py  onebot_v11.py  onebot_v12.py  qq.py  red.py  satori.py  telegram.py
